--- a/vision_transformers/data/DETR.yaml
+++ b/vision_transformers/data/DETR.yaml
@@ -1,8 +1,8 @@
 # Images and labels direcotry should be relative to train.py
-TRAIN_DIR_IMAGES: '../../object_detection/input/new merge.v4i.voc/train'
-TRAIN_DIR_LABELS: '../../object_detection/input/new merge.v4i.voc/train'
-VALID_DIR_IMAGES: '../../object_detection/input/new merge.v4i.voc/valid'
-VALID_DIR_LABELS: '../../object_detection/input/new merge.v4i.voc/valid'
+TRAIN_DIR_IMAGES: '/kaggle/working/detr/input/new merge.v4i.voc/train'
+TRAIN_DIR_LABELS: '/kaggle/working/detr/input/new merge.v4i.voc/train'
+VALID_DIR_IMAGES: '/kaggle/working/detr/input/new merge.v4i.voc/valid'
+VALID_DIR_LABELS: '/kaggle/working/detr/input/new merge.v4i.voc/valid'
 
 # Class names.
 CLASSES: ['_background_', 'api', 'asap']
